--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
   </head>
   <body>
+    <div>
+      <img src="/images/LOPAT.GIF" alt="were is consol" />
+      <p>да где же эта консоль?</p>
+    </div>
+
     <script src="./js/task-1.js"></script>
     <script src="./js/task-2.js"></script>
     <script src="./js/task-3.js"></script>
