--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div>
-      <img src="/images/LOPAT.GIF" alt="were is consol" />
+      <img src="/images/4be141f4e2fa7.jpg" alt="were is consol" />
       <p>да где же эта консоль?</p>
     </div>
 
